# rust-hosting-POC

./: Cargo.toml  Dockerfile  Dockerfileyayaya  README.md  azure-pipelines.yaml
.github/workflows/: azure-container-webapp.yml
docker/: Dockerfile
src/: main.rs
src/functions/: get_hello.rs  mod.rs
